services/homepage/ingress-test.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-ingress-test
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: https://homepage.test.local.hohepa.dev
    gethomepage.dev/group: Internal
    gethomepage.dev/name: Homepage - Test
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/app: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.test.local.hohepa.dev`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
  tls:
    secretName: test-local-hohepa-dev-tls
