services/homepage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-ingress
  namespace: services
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.local.hohepa.dev`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
  tls:
    secretName: local-hohepa-dev-tls
